adjusted mcapRank font size to prevent overlap

--- a/src/index.css
+++ b/src/index.css
@@ -260,6 +260,6 @@ a:hover {
     font-size: 10px;
   }
   .mcapRank {
-    font-size: 13px;
+    font-size: 10px;
   }
 }
